cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09255_181561553.yaml
Resources:
  undefinedfargateroleAD2B0965:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      RoleName: undefined-fargate-role
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-fargate-role/Resource
  undefinedfargateroleDefaultPolicyFBADC75B:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - s3:PutObject
              - s3:GetObjectAcl
              - s3:GetObject
              - s3:ListBucket
              - s3:PutObjectAcl
              - s3:DeleteObject
            Effect: Allow
            Resource:
              - Fn::GetAtt:
                  - s3bucketFBFA637E
                  - Arn
              - Fn::Join:
                  - ""
                  - - Fn::GetAtt:
                        - s3bucketFBFA637E
                        - Arn
                    - /*
          - Action:
              - cognito-idp:AdminInitiateAuth
              - cognito-idp:AdminCreateUser
              - cognito-idp:AdminSetUserPassword
              - cognito-idp:UpdateUserPoolClient
              - cognito-idp:AdminDeleteUser
            Effect: Allow
            Resource: not_defined
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - undefinedgatlingF0745C3F
                - Arn
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - undefinedgatlingcontainer733AE0BA
                - Arn
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - undefinedmockdataD6C52B81
                - Arn
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - undefinedmockdatacontainerA716AA31
                - Arn
        Version: "2012-10-17"
      PolicyName: undefinedfargateroleDefaultPolicyFBADC75B
      Roles:
        - Ref: undefinedfargateroleAD2B0965
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-fargate-role/DefaultPolicy/Resource
  s3bucketFBFA637E:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: undefined-loadtest
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/s3bucket/Resource
  undefinedvpc9D035DFB:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 198.162.0.0/24
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/Resource
  undefinedvpcPublicSubnet1Subnet2F272F36:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 198.162.0.0/26
      VpcId:
        Ref: undefinedvpc9D035DFB
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1/Subnet
  undefinedvpcPublicSubnet1RouteTableC8074D96:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: undefinedvpc9D035DFB
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1/RouteTable
  undefinedvpcPublicSubnet1RouteTableAssociationE17874A6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: undefinedvpcPublicSubnet1RouteTableC8074D96
      SubnetId:
        Ref: undefinedvpcPublicSubnet1Subnet2F272F36
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1/RouteTableAssociation
  undefinedvpcPublicSubnet1DefaultRoute24C53AC0:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: undefinedvpcPublicSubnet1RouteTableC8074D96
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: undefinedvpcIGWFE132CC6
    DependsOn:
      - undefinedvpcVPCGW44BCB74B
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1/DefaultRoute
  undefinedvpcPublicSubnet1EIP30C62706:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1/EIP
  undefinedvpcPublicSubnet1NATGateway389D223D:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - undefinedvpcPublicSubnet1EIP30C62706
          - AllocationId
      SubnetId:
        Ref: undefinedvpcPublicSubnet1Subnet2F272F36
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet1/NATGateway
  undefinedvpcPublicSubnet2Subnet7C42D864:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 198.162.0.64/26
      VpcId:
        Ref: undefinedvpc9D035DFB
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2/Subnet
  undefinedvpcPublicSubnet2RouteTable030900E7:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: undefinedvpc9D035DFB
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2/RouteTable
  undefinedvpcPublicSubnet2RouteTableAssociation3691BF45:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: undefinedvpcPublicSubnet2RouteTable030900E7
      SubnetId:
        Ref: undefinedvpcPublicSubnet2Subnet7C42D864
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2/RouteTableAssociation
  undefinedvpcPublicSubnet2DefaultRoute61A9853D:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: undefinedvpcPublicSubnet2RouteTable030900E7
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: undefinedvpcIGWFE132CC6
    DependsOn:
      - undefinedvpcVPCGW44BCB74B
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2/DefaultRoute
  undefinedvpcPublicSubnet2EIP672CBAC1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2/EIP
  undefinedvpcPublicSubnet2NATGatewayDD59D28B:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - undefinedvpcPublicSubnet2EIP672CBAC1
          - AllocationId
      SubnetId:
        Ref: undefinedvpcPublicSubnet2Subnet7C42D864
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PublicSubnet2/NATGateway
  undefinedvpcPrivateSubnet1Subnet808D961B:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 198.162.0.128/26
      VpcId:
        Ref: undefinedvpc9D035DFB
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet1
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet1/Subnet
  undefinedvpcPrivateSubnet1RouteTable6A5CB485:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: undefinedvpc9D035DFB
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet1/RouteTable
  undefinedvpcPrivateSubnet1RouteTableAssociation528476AC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: undefinedvpcPrivateSubnet1RouteTable6A5CB485
      SubnetId:
        Ref: undefinedvpcPrivateSubnet1Subnet808D961B
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet1/RouteTableAssociation
  undefinedvpcPrivateSubnet1DefaultRoute8F0EA56B:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: undefinedvpcPrivateSubnet1RouteTable6A5CB485
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: undefinedvpcPublicSubnet1NATGateway389D223D
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet1/DefaultRoute
  undefinedvpcPrivateSubnet2Subnet9351A51B:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 198.162.0.192/26
      VpcId:
        Ref: undefinedvpc9D035DFB
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet2
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet2/Subnet
  undefinedvpcPrivateSubnet2RouteTable7A13F745:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: undefinedvpc9D035DFB
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet2/RouteTable
  undefinedvpcPrivateSubnet2RouteTableAssociation936402DC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: undefinedvpcPrivateSubnet2RouteTable7A13F745
      SubnetId:
        Ref: undefinedvpcPrivateSubnet2Subnet9351A51B
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet2/RouteTableAssociation
  undefinedvpcPrivateSubnet2DefaultRoute1EA1879C:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: undefinedvpcPrivateSubnet2RouteTable7A13F745
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: undefinedvpcPublicSubnet2NATGatewayDD59D28B
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/PrivateSubnet2/DefaultRoute
  undefinedvpcIGWFE132CC6:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: PerftestStackAirlineStack/undefined-vpc
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/IGW
  undefinedvpcVPCGW44BCB74B:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: undefinedvpc9D035DFB
      InternetGatewayId:
        Ref: undefinedvpcIGWFE132CC6
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-vpc/VPCGW
  undefinedgatlingF0745C3F:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: undefined-gatling
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-gatling/Resource
  undefinedmockdataD6C52B81:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: undefined-mockdata
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-mockdata/Resource
  undefinedcluster968028A6:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: undefined-cluster
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-cluster/Resource
  undefinedgatlingtaskdefEB8A2067:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: APPSYNC_URL
              Value:
                Ref: SsmParameterValueundefinedserviceamplifyapiurlC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: API_URL
              Value:
                Ref: SsmParameterValueundefinedservicepaymentapichargeurlC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: COGNITO_URL
              Value:
                Ref: SsmParameterValueundefinedserviceauthuserpoolurlC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: S3_BUCKET
              Value:
                Ref: SsmParameterValueundefinedservices3loadtestbucketC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: TOKEN_CSV
              Value:
                Ref: SsmParameterValueundefinedserviceloadtestcsvtokenC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: STRIPE_PUBLIC_KEY
              Value:
                Ref: SsmParameterValueundefinedservicepaymentstripepublicKeyC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: USER_COUNT
              Value:
                Ref: SsmParameterValueundefinedserviceloadtestusercountC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: DURATION
              Value:
                Ref: SsmParameterValueundefinedserviceloadtestdurationC96584B6F00A464EAD1953AFF4B05118Parameter
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 4
                    - Fn::Split:
                        - ":"
                        - Fn::GetAtt:
                            - undefinedgatlingF0745C3F
                            - Arn
                - .dkr.ecr.
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - ":"
                        - Fn::GetAtt:
                            - undefinedgatlingF0745C3F
                            - Arn
                - "."
                - Ref: AWS::URLSuffix
                - /
                - Ref: undefinedgatlingF0745C3F
                - :latest
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: undefinedgatlingcontainer733AE0BA
              awslogs-stream-prefix: gatling
              awslogs-region:
                Ref: AWS::Region
          Name: undefined-gatling-container
      Cpu: "1024"
      ExecutionRoleArn:
        Fn::GetAtt:
          - undefinedfargateroleAD2B0965
          - Arn
      Family: undefined-gatling-task-def
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - undefinedfargateroleAD2B0965
          - Arn
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-gatling-task-def/Resource
  undefinedmockdatataskdefD734D9AE:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: TOKEN_CSV
              Value:
                Ref: SsmParameterValueundefinedserviceloadtestcsvtokenC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: USER_CSV
              Value:
                Ref: SsmParameterValueundefinedserviceloadtestcsvuserC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: AWS_REGION
              Value: undefined
            - Name: S3_BUCKET
              Value:
                Ref: SsmParameterValueundefinedservices3loadtestbucketC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: USER_POOL_ID
              Value:
                Ref: SsmParameterValueundefinedserviceamplifyauthuserpoolidC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: COGNITO_CLIENT_ID
              Value:
                Ref: SsmParameterValueundefinedserviceamplifyauthuserpoolclientIdC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: FOLDERPATH
              Value: ./
            - Name: APPSYNC_API_KEY
              Value:
                Ref: SsmParameterValueundefinedserviceamplifyapiidC96584B6F00A464EAD1953AFF4B05118Parameter
            - Name: APPSYNC_URL
              Value:
                Ref: SsmParameterValueundefinedserviceamplifyapiurlC96584B6F00A464EAD1953AFF4B05118Parameter
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 4
                    - Fn::Split:
                        - ":"
                        - Fn::GetAtt:
                            - undefinedmockdataD6C52B81
                            - Arn
                - .dkr.ecr.
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - ":"
                        - Fn::GetAtt:
                            - undefinedmockdataD6C52B81
                            - Arn
                - "."
                - Ref: AWS::URLSuffix
                - /
                - Ref: undefinedmockdataD6C52B81
                - :latest
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: undefinedmockdatacontainerA716AA31
              awslogs-stream-prefix: mockdata
              awslogs-region:
                Ref: AWS::Region
          Name: undefined-mockdata-container
      Cpu: "1024"
      ExecutionRoleArn:
        Fn::GetAtt:
          - undefinedfargateroleAD2B0965
          - Arn
      Family: undefined-mockdata-task-def
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - undefinedfargateroleAD2B0965
          - Arn
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-mockdata-task-def/Resource
  undefinedgatlingcontainer733AE0BA:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /aws/ecs/undefined-gatling-container
      RetentionInDays: 7
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-gatling-container/Resource
  undefinedmockdatacontainerA716AA31:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /aws/ecs/undefined-mockdata-container
      RetentionInDays: 7
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/undefined-mockdata-container/Resource
  SetupUsersSecurityGroup49EC41BD:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: PerftestStackAirlineStack/Setup Users/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: undefinedvpc9D035DFB
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/Setup Users/SecurityGroup/Resource
  LoadFlightsSecurityGroup2FEB3153:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: PerftestStackAirlineStack/Load Flights/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: undefinedvpc9D035DFB
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/Load Flights/SecurityGroup/Resource
  RunGatlingSecurityGroupA28646FB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: PerftestStackAirlineStack/Run Gatling/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: undefinedvpc9D035DFB
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/Run Gatling/SecurityGroup/Resource
  ConsolidateReportSecurityGroupC013BE0A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: PerftestStackAirlineStack/Consolidate Report/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: undefinedvpc9D035DFB
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/Consolidate Report/SecurityGroup/Resource
  CleanUpSecurityGroup9B2AB8C6:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: PerftestStackAirlineStack/Clean Up/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: undefinedvpc9D035DFB
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/Clean Up/SecurityGroup/Resource
  loadtestundefinedRoleA659DE87:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - states.
                    - Ref: AWS::Region
                    - .amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/loadtest-undefined/Role/Resource
  loadtestundefinedRoleDefaultPolicyCF970079:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: ecs:RunTask
            Effect: Allow
            Resource:
              Ref: undefinedmockdatataskdefD734D9AE
          - Action:
              - ecs:StopTask
              - ecs:DescribeTasks
            Effect: Allow
            Resource: "*"
          - Action: iam:PassRole
            Effect: Allow
            Resource:
              - Fn::GetAtt:
                  - undefinedfargateroleAD2B0965
                  - Arn
              - Fn::GetAtt:
                  - undefinedfargateroleAD2B0965
                  - Arn
          - Action: ecs:RunTask
            Effect: Allow
            Resource:
              Ref: undefinedgatlingtaskdefEB8A2067
        Version: "2012-10-17"
      PolicyName: loadtestundefinedRoleDefaultPolicyCF970079
      Roles:
        - Ref: loadtestundefinedRoleA659DE87
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/loadtest-undefined/Role/DefaultPolicy/Resource
  loadtestundefinedD0CF5288:
    Type: AWS::StepFunctions::StateMachine
    Properties:
      DefinitionString:
        Fn::Join:
          - ""
          - - '{"StartAt":"Setup Users","States":{"Setup Users":{"Next":"Load Flights","Parameters":{"Cluster":"'
            - Fn::GetAtt:
                - undefinedcluster968028A6
                - Arn
            - '","TaskDefinition":"'
            - Ref: undefinedmockdatataskdefD734D9AE
            - '","NetworkConfiguration":{"AwsvpcConfiguration":{"AssignPublicIp":"ENABLED","Subnets":["'
            - Ref: undefinedvpcPublicSubnet1Subnet2F272F36
            - '","'
            - Ref: undefinedvpcPublicSubnet2Subnet7C42D864
            - '"],"SecurityGroups":["'
            - Fn::GetAtt:
                - SetupUsersSecurityGroup49EC41BD
                - GroupId
            - '"]}},"Overrides":{"ContainerOverrides":[{"Name":"undefined-mockdata-container","Command.$":"$.commands","Environment":[{"Name":"setup-users","Value.$":"$$.Task.Token"}]}]},"LaunchType":"FARGATE"},"Type":"Task","Resource":"arn:'
            - Ref: AWS::Partition
            - :states:::ecs:runTask.waitForTaskToken"},"Load Flights":{"Next":"Run Gatling","Parameters":{"Cluster":"
            - Fn::GetAtt:
                - undefinedcluster968028A6
                - Arn
            - '","TaskDefinition":"'
            - Ref: undefinedmockdatataskdefD734D9AE
            - '","NetworkConfiguration":{"AwsvpcConfiguration":{"AssignPublicIp":"ENABLED","Subnets":["'
            - Ref: undefinedvpcPublicSubnet1Subnet2F272F36
            - '","'
            - Ref: undefinedvpcPublicSubnet2Subnet7C42D864
            - '"],"SecurityGroups":["'
            - Fn::GetAtt:
                - LoadFlightsSecurityGroup2FEB3153
                - GroupId
            - '"]}},"Overrides":{"ContainerOverrides":[{"Name":"undefined-mockdata-container","Command.$":"$.commands","Environment":[{"Name":"load-flights","Value.$":"$$.Task.Token"}]}]},"LaunchType":"FARGATE"},"Type":"Task","Resource":"arn:'
            - Ref: AWS::Partition
            - :states:::ecs:runTask.waitForTaskToken"},"Run Gatling":{"Next":"Consolidate Report","Parameters":{"Cluster":"
            - Fn::GetAtt:
                - undefinedcluster968028A6
                - Arn
            - '","TaskDefinition":"'
            - Ref: undefinedgatlingtaskdefEB8A2067
            - '","NetworkConfiguration":{"AwsvpcConfiguration":{"AssignPublicIp":"ENABLED","Subnets":["'
            - Ref: undefinedvpcPublicSubnet1Subnet2F272F36
            - '","'
            - Ref: undefinedvpcPublicSubnet2Subnet7C42D864
            - '"],"SecurityGroups":["'
            - Fn::GetAtt:
                - RunGatlingSecurityGroupA28646FB
                - GroupId
            - '"]}},"Overrides":{"ContainerOverrides":[{"Name":"undefined-gatling-container","Command.$":"$.commands","Environment":[{"Name":"run-gatling","Value.$":"$$.Task.Token"}]}]},"LaunchType":"FARGATE"},"Type":"Task","Resource":"arn:'
            - Ref: AWS::Partition
            - :states:::ecs:runTask.waitForTaskToken"},"Consolidate Report":{"Next":"Clean Up","Parameters":{"Cluster":"
            - Fn::GetAtt:
                - undefinedcluster968028A6
                - Arn
            - '","TaskDefinition":"'
            - Ref: undefinedgatlingtaskdefEB8A2067
            - '","NetworkConfiguration":{"AwsvpcConfiguration":{"AssignPublicIp":"ENABLED","Subnets":["'
            - Ref: undefinedvpcPublicSubnet1Subnet2F272F36
            - '","'
            - Ref: undefinedvpcPublicSubnet2Subnet7C42D864
            - '"],"SecurityGroups":["'
            - Fn::GetAtt:
                - ConsolidateReportSecurityGroupC013BE0A
                - GroupId
            - '"]}},"Overrides":{"ContainerOverrides":[{"Name":"undefined-gatling-container","Command.$":"$.commands","Environment":[{"Name":"consolidate-report","Value.$":"$$.Task.Token"}]}]},"LaunchType":"FARGATE"},"Type":"Task","Resource":"arn:'
            - Ref: AWS::Partition
            - :states:::ecs:runTask.waitForTaskToken"},"Clean Up":{"End":true,"Parameters":{"Cluster":"
            - Fn::GetAtt:
                - undefinedcluster968028A6
                - Arn
            - '","TaskDefinition":"'
            - Ref: undefinedmockdatataskdefD734D9AE
            - '","NetworkConfiguration":{"AwsvpcConfiguration":{"AssignPublicIp":"ENABLED","Subnets":["'
            - Ref: undefinedvpcPublicSubnet1Subnet2F272F36
            - '","'
            - Ref: undefinedvpcPublicSubnet2Subnet7C42D864
            - '"],"SecurityGroups":["'
            - Fn::GetAtt:
                - CleanUpSecurityGroup9B2AB8C6
                - GroupId
            - '"]}},"Overrides":{"ContainerOverrides":[{"Name":"undefined-mockdata-container","Command.$":"$.commands","Environment":[{"Name":"clean-up","Value.$":"$$.Task.Token"}]}]},"LaunchType":"FARGATE"},"Type":"Task","Resource":"arn:'
            - Ref: AWS::Partition
            - :states:::ecs:runTask.waitForTaskToken"}}}
      RoleArn:
        Fn::GetAtt:
          - loadtestundefinedRoleA659DE87
          - Arn
      StateMachineName: loadtest-undefined
    DependsOn:
      - loadtestundefinedRoleDefaultPolicyCF970079
      - loadtestundefinedRoleA659DE87
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/loadtest-undefined/Resource
  ecstasklambdaServiceRoleD2B30E9E:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/ecstasklambda/ServiceRole/Resource
  ecstasklambdaServiceRoleDefaultPolicyB739B7E9:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: states:SendTaskSuccess
            Effect: Allow
            Resource:
              Ref: loadtestundefinedD0CF5288
        Version: "2012-10-17"
      PolicyName: ecstasklambdaServiceRoleDefaultPolicyB739B7E9
      Roles:
        - Ref: ecstasklambdaServiceRoleD2B30E9E
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/ecstasklambda/ServiceRole/DefaultPolicy/Resource
  ecstasklambda100E63E9:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Ref: AssetParameters4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374S3BucketB9497638
        S3Key:
          Fn::Join:
            - ""
            - - Fn::Select:
                  - 0
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374S3VersionKeyC20ACE5A
              - Fn::Select:
                  - 1
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374S3VersionKeyC20ACE5A
      Handler: index.handler
      Role:
        Fn::GetAtt:
          - ecstasklambdaServiceRoleD2B30E9E
          - Arn
      Runtime: nodejs10.x
      FunctionName: undefined-ecs-task-change
    DependsOn:
      - ecstasklambdaServiceRoleDefaultPolicyB739B7E9
      - ecstasklambdaServiceRoleD2B30E9E
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/ecstasklambda/Resource
      aws:asset:path: asset.4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374
      aws:asset:property: Code
  ecstasklambdaAllowEventRulePerftestStackAirlineStackcwruleC019C1BCBC2A4A6A:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Fn::GetAtt:
          - ecstasklambda100E63E9
          - Arn
      Principal: events.amazonaws.com
      SourceArn:
        Fn::GetAtt:
          - cwruleA2F94D36
          - Arn
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/ecstasklambda/AllowEventRulePerftestStackAirlineStackcwruleC019C1BC
  cwruleA2F94D36:
    Type: AWS::Events::Rule
    Properties:
      Description: Rule that looks at ECS Task change state and triggers Lambda function
      EventPattern:
        source:
          - aws.ecs
        detail-type:
          - ECS Task State Change
        detail:
          clusterArn:
            - Fn::GetAtt:
                - undefinedcluster968028A6
                - Arn
          lastStatus:
            - STOPPED
      Name: ECS-task-change-cdk
      State: ENABLED
      Targets:
        - Arn:
            Fn::GetAtt:
              - ecstasklambda100E63E9
              - Arn
          Id: Target0
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/cw-rule/Resource
  LoadTestS3BucketD1517B54:
    Type: AWS::SSM::Parameter
    Properties:
      Type: String
      Value:
        Ref: s3bucketFBFA637E
      Name: /undefined/service/s3/loadtest/bucket
    Metadata:
      aws:cdk:path: PerftestStackAirlineStack/LoadTestS3Bucket/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.31.0,@aws-cdk/aws-applicationautoscaling=1.31.0,@aws-cdk/aws-autoscaling=1.31.0,@aws-cdk/aws-autoscaling-common=1.31.0,@aws-cdk/aws-autoscaling-hooktargets=1.31.0,@aws-cdk/aws-cloudwatch=1.31.0,@aws-cdk/aws-ec2=1.31.0,@aws-cdk/aws-ecr=1.31.0,@aws-cdk/aws-ecr-assets=1.31.0,@aws-cdk/aws-ecs=1.31.0,@aws-cdk/aws-elasticloadbalancingv2=1.31.0,@aws-cdk/aws-events=1.31.0,@aws-cdk/aws-events-targets=1.31.0,@aws-cdk/aws-iam=1.31.0,@aws-cdk/aws-kms=1.31.0,@ [...]
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueundefinedserviceloadtestcsvtokenC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/loadtest/csv/token
  SsmParameterValueundefinedserviceloadtestcsvuserC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/loadtest/csv/user
  SsmParameterValueundefinedservices3loadtestbucketC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/s3/loadtest/bucket
  SsmParameterValueundefinedserviceamplifyauthuserpoolidC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/amplify/auth/userpool/id
  SsmParameterValueundefinedserviceamplifyauthuserpoolclientIdC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/amplify/auth/userpool/clientId
  SsmParameterValueundefinedserviceamplifyapiidC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/amplify/api/id
  SsmParameterValueundefinedserviceamplifyapiurlC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/amplify/api/url
  SsmParameterValueundefinedserviceauthuserpoolurlC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/auth/userpool/url
  SsmParameterValueundefinedservicepaymentapichargeurlC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/payment/api/charge/url
  SsmParameterValueundefinedservicepaymentstripepublicKeyC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/payment/stripe/publicKey
  SsmParameterValueundefinedserviceloadtestusercountC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/loadtest/usercount
  SsmParameterValueundefinedserviceloadtestdurationC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /undefined/service/loadtest/duration
  AssetParameters4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374S3BucketB9497638:
    Type: String
    Description: S3 bucket for asset "4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374"
  AssetParameters4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374S3VersionKeyC20ACE5A:
    Type: String
    Description: S3 key for asset version "4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374"
  AssetParameters4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374ArtifactHash89EFA3F1:
    Type: String
    Description: Artifact hash for asset "4cb5a61d1297d649fd1cbdd7e4bd3aa3c93d22f0be1a9157ae4b53e43060b374"
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
